--- a/Site.Master
+++ b/Site.Master
@@ -36,8 +36,7 @@
                 <%--Site Scripts--%>
             </Scripts>
         </asp:ScriptManager>
-        <link rel= "stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-        <link rel= "stylesheet" href="Content/Site.css">
+       
         <header role="banner">
             <img id="logo-main" src="Content/logo.png" width="300" alt="Logo Thing main logo">
             <nav id="navbar-primary" class="navbar navbar-default" role="navigation">
@@ -53,11 +52,10 @@
                     </div>
                     <div class="collapse navbar-collapse" id="navbar-primary-collapse">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
+                            <li class="active"><a href="Default.aspx">Home</a></li>
+                            <li><a href="Search.aspx">Search</a></li>
+                            <li><a href="Contact.aspx">Contact</a></li>
+                            <li><a href="CreateAccount.aspx">Create Account</a></li>
                         </ul>
                     </div>
                     <!-- /.navbar-collapse -->
