--- a/Content/bootstrap.css
+++ b/Content/bootstrap.css
@@ -118,8 +118,9 @@ optgroup,
 select,
 textarea {
   color: inherit;
-  font: inherit;
-  margin: 0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 30px;
 }
 button {
   overflow: visible;
@@ -1114,6 +1115,7 @@ figure {
 }
 img {
   vertical-align: middle;
+    width: 221px;
 }
 .img-responsive,
 .thumbnail > img,
@@ -1288,6 +1290,7 @@ h6,
 }
 p {
   margin: 0 0 10px;
+    height: 115px;
 }
 .lead {
   margin-bottom: 20px;
