--- a/Site.Master
+++ b/Site.Master
@@ -1,5 +1,6 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="Housing_Project.SiteMaster" %>
 
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -12,9 +13,14 @@
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
 
-    <webopt:BundleReference runat="server" Path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+    <link href="SiteMaster.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="logo.png">
 </head>
+
 <body>
     <form runat="server">
         <asp:ScriptManager runat="server">
@@ -36,42 +42,49 @@
                 <%--Site Scripts--%>
             </Scripts>
         </asp:ScriptManager>
-       
-        <header role="banner">
-            <img id="logo-main" src="Content/logo.png" width="300" alt="Logo Thing main logo">
-            <nav id="navbar-primary" class="navbar navbar-default" role="navigation">
+        <header>
+            <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top otters">
                 <div class="container-fluid">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-primary-collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-                    <div class="collapse navbar-collapse" id="navbar-primary-collapse">
-                        <ul class="nav navbar-nav">
-                            <li class="active"><a href="Default.aspx">Home</a></li>
-                            <li><a href="Search.aspx">Search</a></li>
-                            <li><a href="Contact.aspx">Contact</a></li>
-                            <li><a href="CreateAccount.aspx">Create Account</a></li>
+                    <a class="navbar-brand" href="Default.aspx">
+                        <img src="Content/logo.png" width="100" height="100"></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarResponsive">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="Default.aspx">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Search.aspx">Search</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="notLoggedIn" href="Login.aspx">Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="notLoggedIn" href="CreateAccount.aspx">Create Account</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="logged" href="UserDashboard.aspx">Dashboard</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Contact.aspx">Contact</a>
+                            </li>
                         </ul>
                     </div>
-                    <!-- /.navbar-collapse -->
                 </div>
-                <!-- /.container-fluid -->
             </nav>
         </header>
-        <!-- header role="banner" -->
+
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <hr />
-            <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
-            </footer>
+
         </div>
+        <footer>
+        </footer>
     </form>
-</body>
+            <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+        </body>
 </html>
